cleaning up python and poetry stuff